syntax = "proto3";

option csharp_namespace = "EmployeeServiceProgProto";

package EmployeeServiceProgProto;

service DictionareService{

	rpc CreateEmployeeType(CreateEmployeeTypeRequest) returns(CreateEmployeeTypeResponse);
	rpc GetAllEmployeeTypes(GetAllEmployeeTypesRequest) returns(GetAllEmployeeTypesResponse);
	rpc DeleteEmloyeeType(DeleteEmloyeeTypeRequest) returns(DeleteEmloyeeTypeResponse);
}

message CreateEmployeeTypeRequest{
	string description = 1;
}

message CreateEmployeeTypeResponse{
	int32 id = 1;
}

message GetAllEmployeeTypesRequest{
	
}

message GetAllEmployeeTypesResponse{
	repeated EmployeeType employeeTypes = 1;
}

message EmployeeType{
	int32 id = 1;
	string description = 2;
}

message DeleteEmloyeeTypeRequest{
	int32 id = 1;
}

message DeleteEmloyeeTypeResponse{
	
}
